707 - Rename QDynamicArray, QBasicArray, QFixedArray to QArray- Done.

--- a/trunk/projects/CodeLite/QuimeraEngine/Common/Common.project
+++ b/trunk/projects/CodeLite/QuimeraEngine/Common/Common.project
@@ -118,11 +118,11 @@
     <File Name="../../../../source/SQInteger.cpp"/>
     <File Name="../../../../source/SQVF32.cpp"/>
     <File Name="../../../../source/QCharIterator.cpp"/>
-    <File Name="../../../../headers/QBasicArray.h"/>
     <File Name="../../../../source/SQAnyTypeToStringConverter.cpp"/>
     <File Name="../../../../headers/SQAnyTypeToStringConverter.h"/>
     <File Name="../../../../headers/QArrayResult.h"/>
     <File Name="../../../../headers/StringsDefinitions.h"/>
+    <File Name="../../../../headers/QArrayBasic.h"/>
   </VirtualDirectory>
   <VirtualDirectory Name="Memory">
     <File Name="../../../../headers/AllocationOperators.h"/>
