--- a/trunk/projects/VS2010/QuimeraEngine/Tools/Tools.vcxproj
+++ b/trunk/projects/VS2010/QuimeraEngine/Tools/Tools.vcxproj
@@ -176,6 +176,8 @@
     <ClInclude Include="..\..\..\..\headers\EQSpaceRelation.h" />
     <ClInclude Include="..\..\..\..\headers\EQTreeTraversalOrder.h" />
     <ClInclude Include="..\..\..\..\headers\MathDefinitions.h" />
+    <ClInclude Include="..\..\..\..\headers\QArrayDynamic.h" />
+    <ClInclude Include="..\..\..\..\headers\QArrayFixed.h" />
     <ClInclude Include="..\..\..\..\headers\QBaseDualQuaternion.h" />
     <ClInclude Include="..\..\..\..\headers\QBaseHexahedron.h" />
     <ClInclude Include="..\..\..\..\headers\QBaseLineSegment.h" />
@@ -197,9 +199,7 @@
     <ClInclude Include="..\..\..\..\headers\QDateTime.h" />
     <ClInclude Include="..\..\..\..\headers\QDictionary.h" />
     <ClInclude Include="..\..\..\..\headers\QDualQuaternion.h" />
-    <ClInclude Include="..\..\..\..\headers\QDynamicArray.h" />
     <ClInclude Include="..\..\..\..\headers\QEvent.h" />
-    <ClInclude Include="..\..\..\..\headers\QFixedArray.h" />
     <ClInclude Include="..\..\..\..\headers\QHashtable.h" />
     <ClInclude Include="..\..\..\..\headers\QHexahedron.h" />
     <ClInclude Include="..\..\..\..\headers\QKeyValuePair.h" />
