--- a/trunk/testing/projects/VS2010/QEUnitTests/Common/Common.vcxproj.filters
+++ b/trunk/testing/projects/VS2010/QEUnitTests/Common/Common.vcxproj.filters
@@ -93,9 +93,6 @@
     <ClCompile Include="..\..\..\..\tests\unit\testmodule_common\QReferenceWrapper_Test.cpp">
       <Filter>Tests</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\..\tests\unit\testmodule_common\QBasicArray_Test.cpp">
-      <Filter>Tests\DataTypes</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\..\..\tests\unit\testmodule_common\QAssertException_Test.cpp">
       <Filter>Tests\Exceptions</Filter>
     </ClCompile>
@@ -109,6 +106,9 @@
       <Filter>Tests\DataTypes</Filter>
     </ClCompile>
     <ClCompile Include="..\..\..\..\tests\unit\testmodule_common\QArrayResult_Test.cpp">
+      <Filter>Tests\DataTypes</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\tests\unit\testmodule_common\QArrayBasic_Test.cpp">
       <Filter>Tests\DataTypes</Filter>
     </ClCompile>
   </ItemGroup>
