Boost_ThrowException.cpp added to Common project due to it is required when compiled on GCC (Linux).

--- a/trunk/projects/CodeLite/QuimeraEngine/Common/Common.project
+++ b/trunk/projects/CodeLite/QuimeraEngine/Common/Common.project
@@ -421,4 +421,7 @@
       </Completion>
     </Configuration>
   </Settings>
+  <VirtualDirectory Name="Workarounds">
+    <File Name="../../../../source/Workarounds/Boost_ThrowException.cpp"/>
+  </VirtualDirectory>
 </CodeLite_Project>
