Boost_ThrowException.cpp added to Common test project due to it is required when compiled on GCC (Linux).

--- a/trunk/testing/projects/CodeLite/QEUnitTests/Common/Common.project
+++ b/trunk/testing/projects/CodeLite/QEUnitTests/Common/Common.project
@@ -118,6 +118,9 @@
     <File Name="../../../../tests/unit/testmodule_common/RTTIDefinitions_Test.cpp"/>
     <File Name="../../../../tests/unit/testmodule_common/RTTITestClasses.cpp"/>
     <File Name="../../../../tests/unit/testmodule_common/RTTITestClasses.h"/>
+    <VirtualDirectory Name="Workarounds">
+      <File Name="../../../../../source/Workarounds/Boost_ThrowException.cpp"/>
+    </VirtualDirectory>
   </VirtualDirectory>
   <VirtualDirectory Name="TestSystem (shared)">
     <File Name="../../../../testsystem/CommonConfigDefinitions.h"/>
