--- a/trunk/testing/projects/VS2010/QEUnitTests/System/System.vcxproj.filters
+++ b/trunk/testing/projects/VS2010/QEUnitTests/System/System.vcxproj.filters
@@ -22,6 +22,9 @@
     <Filter Include="Tests\Threading">
       <UniqueIdentifier>{578cf153-b2b9-4187-b023-e7a37a21bcbb}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Tests\Workarounds">
+      <UniqueIdentifier>{1fb1e78a-9737-4538-964e-52a003806e0d}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\..\testsystem\EQTestType.cpp">
@@ -134,6 +137,9 @@
     </ClCompile>
     <ClCompile Include="..\..\..\..\tests\unit\testmodule_system\QScopedCallTraceNotifier_Test.cpp">
       <Filter>Tests\Diagnosis</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\..\source\Workarounds\Boost_ThrowException.cpp">
+      <Filter>Tests\Workarounds</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
