--- a/trunk/team/GraphicsTest/OpenGLTests/QuimeraEngineTestApp.vcxproj
+++ b/trunk/team/GraphicsTest/OpenGLTests/QuimeraEngineTestApp.vcxproj
@@ -46,6 +46,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='DebugWin32SharedrtDynamic|Win32'">
     <LinkIncremental>true</LinkIncremental>
     <GenerateManifest>false</GenerateManifest>
+    <ExecutablePath>H:\QuimeraEngine\QESVN\team\GraphicsTest\3rdparty\assimp\bin\Win32;$(ExecutablePath)</ExecutablePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='DebugWin32SharedrtStatic|Win32'">
     <ClCompile>
@@ -80,7 +81,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_WINDOWS;QE_PREPROCESSOR_IMPORTLIB_QUIMERAENGINE;BOOST_NO_RTTI;BOOST_NO_TYPEID;BOOST_NO_EXCEPTIONS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>$(SolutionDir)3rdparty\glm\include;$(SolutionDir)3rdparty\stb\include;$(SolutionDir)3rdparty\Boost\include;$(SolutionDir)3rdparty\QuimeraEngine\include;$(SolutionDir)3rdparty\ICU\include;.;$(SolutionDir)3rdparty\glew\include\;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)3rdparty\glm\include;$(SolutionDir)3rdparty\stb\include;$(SolutionDir)3rdparty\Boost\include;$(SolutionDir)3rdparty\QuimeraEngine\include;$(SolutionDir)3rdparty\ICU\include;.;$(SolutionDir)3rdparty\glew\include\;$(SolutionDir)3rdparty\assimp\include\;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <CompileAsManaged>false</CompileAsManaged>
       <StringPooling>true</StringPooling>
       <RuntimeTypeInfo>false</RuntimeTypeInfo>
@@ -94,8 +95,8 @@
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>$(SolutionDir)3rdparty\QuimeraEngine\bin\Win32\DebugSharedrt\VS2010\;$(SolutionDir)3rdparty\Boost\bin\Win32\DebugSharedrtStatic;$(SolutionDir)3rdparty\ICU\bin\Win32\ReleaseSharedrtDynamic\VS2010;$(SolutionDir)3rdparty\glew\bin\Win32\Debug\;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>QuimeraEngineCommon.lib;QuimeraEngineTools.lib;QuimeraEngineSystem.lib;QuimeraEngineCore.lib;icuuc.lib;icudt.lib;icuin.lib;opengl32.lib;glew32d.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(SolutionDir)3rdparty\QuimeraEngine\bin\Win32\DebugSharedrt\VS2010\;$(SolutionDir)3rdparty\Boost\bin\Win32\DebugSharedrtStatic;$(SolutionDir)3rdparty\ICU\bin\Win32\ReleaseSharedrtDynamic\VS2010;$(SolutionDir)3rdparty\glew\bin\Win32\Debug\;$(SolutionDir)3rdparty\assimp\bin\Win32\;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>QuimeraEngineCommon.lib;QuimeraEngineTools.lib;QuimeraEngineSystem.lib;QuimeraEngineCore.lib;icuuc.lib;icudt.lib;icuin.lib;opengl32.lib;glew32d.lib;assimpd.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <NoEntryPoint>false</NoEntryPoint>
       <EntryPointSymbol>
       </EntryPointSymbol>
@@ -108,11 +109,13 @@
       <Command>copy $(SolutionDir)3rdparty\QuimeraEngine\bin\Win32\DebugSharedrt\VS2010\*.* $(TargetDir)
 copy $(SolutionDir)3rdparty\ICU\bin\Win32\ReleaseSharedrtDynamic\VS2010\*.dll $(TargetDir)
 copy $(SolutionDir)3rdparty\glew\bin\Win32\Debug\*.* $(TargetDir)
+copy $(SolutionDir)3rdparty\assimp\bin\Win32\*.* $(TargetDir)
 </Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="ErrorTracingDefinitions.h" />
+    <ClInclude Include="QModelLoader.h" />
     <ClInclude Include="QAspect.h" />
     <ClInclude Include="QCamera.h" />
     <ClInclude Include="QEntity.h" />
@@ -128,10 +131,12 @@ copy $(SolutionDir)3rdparty\glew\bin\Win32\Debug\*.* $(TargetDir)
     <ClInclude Include="QResourceManager.h" />
     <ClInclude Include="QSampler2D.h" />
     <ClInclude Include="QShaderCompositor.h" />
+    <ClInclude Include="QStaticModel.h" />
     <ClInclude Include="QTexture2D.h" />
     <ClInclude Include="QuimeraEngineIncludesAndUsings.h" />
     <ClInclude Include="QVertexShader.h" />
     <ClInclude Include="QWindow.h" />
+    <ClInclude Include="VertexDefinitions.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Boost_ThrowException.cpp" />
@@ -140,6 +145,7 @@ copy $(SolutionDir)3rdparty\glew\bin\Win32\Debug\*.* $(TargetDir)
     <ClCompile Include="QDeviceContext_PixelFormats.cpp" />
     <ClCompile Include="QKeyboard.cpp" />
     <ClCompile Include="QWindow.cpp" />
+    <ClCompile Include="VertexDefinitions.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\FragmentShader.glsl" />
